Fixed weird empty right-side-space issue
There was some empty space on the right side of the mobile screen (outside view area) because the old nav was still displaying off screen.

--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,5 +1,6 @@
 
 @include media-sm {
+
     .banner {
         background: url(../img/mobile/image-hero.jpg);
         background-size: cover;
@@ -368,7 +369,7 @@
         top: 0;
         left: 0;
         width: 100vw;
-        height: 100vh;
+        height: 100%;
         background-color: $primary-black;
         z-index: 0;
         opacity: 0;
@@ -448,5 +449,11 @@
         'logo btn'
         'nav nav';
         grid-template-rows: 1fr 4fr;
+    }
+
+    .menu {
+        .nav {
+            display: none;
+        }
     }
 }
